# atomic-lang-model

./: .gitignore  README.md  create-status.sh
atomic-lang-model/: Cargo.toml
atomic-lang-model/python/: hybrid_model.py  tiny_lm.py
atomic-lang-model/src/: lib.rs
docs/: README.md  api-reference.md  computational-processing.md  examples.md  formal-language-theory.md  glossary.md  index.md  nlp-verification-methods.md  recursive-language-overview.md  the-recursive-story.md  walkthrough.md
docs/DEVELOPER_GUIDE/: 01-api-reference.md
docs/THEORY/: 01-mathematical-foundations.md
docs/USER_GUIDE/: 01-installation.md  02-quick-example.md  03-examples.md
docs/article/: ALM.tex
overview/: README.md
